las listas de reproduccion abren una pestana nueva

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         <h2 class="app-name">Toriap-Music</h2>
         <p class="my-playlist">My playlist</p>
         <ol class="play-list">
-          <li><a href="https://open.spotify.com/playlist/60MLvvhXTAMkLNSzIQDSeo?si=3XmbuzBAQrqOz3UQI_llyQ">Epic music</a></li>
-          <li><a href="https://open.spotify.com/playlist/41dX9jhWhDPXetedtDSdce?si=wASf5DDDSkq-_vkKEumMTA">Gaitas</a></li>
-          <li><a href="https://open.spotify.com/playlist/5WhUOk0AwNSjk8zH8Bxgqv">Salsa para tu ENCAVA</a></li>
-          <li><a href="https://open.spotify.com/playlist/5eF1lSsnvZZOwkIBAvensA?si=d2_ZepR3RsC3lLTlIRnE5A">Salsa viejitas</a></li>
-          <li><a href="https://open.spotify.com/playlist/6lyxFDmZsoYPSaSqDs9hGN">Yoko Shimomura</a></li>
-          <li><a href="https://open.spotify.com/playlist/6X6nPTW7sloWCKScMtBGeN?si=5lD_8iXFSzyLZZv074xWxA">Instrumental</a></li>
-          <li><a href="https://open.spotify.com/playlist/37i9dQZF1DXdPec7aLTmlC">Hits alegres</a></li>
-          <li><a href="https://open.spotify.com/playlist/6BawiZdrVQ8lqyqBizQRfW">Mixtas</a></li>
-          <li><a href="https://open.spotify.com/playlist/6lyxFDmZsoYPSaSqDs9hGN">Game songs</a></li>
-          <li><a href="https://open.spotify.com/playlist/3X6uLaB8SrevhWHBdJXmqK">Anime</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/60MLvvhXTAMkLNSzIQDSeo?si=3XmbuzBAQrqOz3UQI_llyQ">Epic music</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/41dX9jhWhDPXetedtDSdce?si=wASf5DDDSkq-_vkKEumMTA">Gaitas</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/5WhUOk0AwNSjk8zH8Bxgqv">Salsa para tu ENCAVA</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/5eF1lSsnvZZOwkIBAvensA?si=d2_ZepR3RsC3lLTlIRnE5A">Salsa viejitas</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/6lyxFDmZsoYPSaSqDs9hGN">Yoko Shimomura</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/6X6nPTW7sloWCKScMtBGeN?si=5lD_8iXFSzyLZZv074xWxA">Instrumental</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/37i9dQZF1DXdPec7aLTmlC">Hits alegres</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/6BawiZdrVQ8lqyqBizQRfW">Mixtas</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/6lyxFDmZsoYPSaSqDs9hGN">Game songs</a></li>
+          <li><a target="_blanc" href="https://open.spotify.com/playlist/3X6uLaB8SrevhWHBdJXmqK">Anime</a></li>
         </ol>
         <p class="friend-list-tittle">Playlist de amigos</p>
         <ol class="friend-list">
